# Data_engineering

./: .gitignore  README.md  requirements.txt
data_engineering/: .env_example  Makefile  README.md  pyproject.toml
data_engineering/api_example/: README.md  api_reader.py
data_engineering/api_example/data/: users.csv  users.parquet
data_engineering/api_example/data/processed/: users_clean.csv  users_clean.parquet
data_engineering/api_example/data/raw/: users.csv  users.parquet
data_engineering/data_engineering/: __init__.py  config.py  data_loader.py  dataset.py  features.py  import_dataset.py  load_from_kaggle.py  plots.py  write_to_db.py
data_engineering/data_engineering/modeling/: predict.py  train.py
data_engineering/data_parser/: README.md  data_parser.py
data_engineering/docs/: DataLoader.md  Database.md
data_engineering/etl/: extract.py  load.py  main.py  transform.py  utils.py
data_engineering/experiments/api_example/: README.md  api_reader.py
data_engineering/experiments/data_engineering/: config.py  data_loader.py  import_dataset.py  load_from_kaggle.py  write_to_db.py
data_engineering/experiments/data_parser/: README.md  data_parser.py
data_engineering/notebooks/: EDA.ipynb  README.md  requirements.txt
data_engineering/tests/: __init__.py  select.sql  test_db.py
